--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
             -->
           </div>
           <div class="card-footer">
-            <div class="popular-destinations-text">Virgil Van Dijk</div>
+            <div class="popular-destinations-text">{{cards[0].age}}</div>
             <div class="popular-destinations-images">
               <div class="circle"><img src="https://image.ibb.co/jmEYL7/adventure_1.jpg" width="100%" height="100%"/></div>
               <div class="circle"><img src="https://image.ibb.co/nsCynn/adventure_2.jpg" width="100%" height="100%"/></div>
