--- a/dating/templates/account.html
+++ b/dating/templates/account.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>{{ current_user.username}}</h1>
+      <h1>{{ current_user.firstname}}</h1>
+        <h1>{{ current_user.lastname}}</h1>
 {% endblock content %}
