--- a/dating/templates/account.html
+++ b/dating/templates/account.html
@@ -3,24 +3,26 @@
     <div class="content-section">
       <div class="media">
         <div>
-        <img src="static/profilepics/{{current_user.image_file }}">
+        <img src="/static/profilepics/{{current_user.image_file }}">
         <div class="media-body">
           <h2 class="account-heading">{{ current_user.firstname }} {{ current_user.lastname}}</h2>
 
-          <ul>
+            <ul>
               <p>{{ current_user.username }}</p>
               <p><b>Birth Day:</b> {{ current_user.date_of_birth }}</p>
               <p><b>Lives in:</b> {{ current_user.city }}</p>
               <p><b>Contact through:</b></p>
               <p style="text-indent: 40px">Email: {{ current_user.email }}</p>
               <p style="text-indent: 40px">Phone: {{ current_user.phone }}</p>
-          </ul>
-          </div>
+            </ul>
+        </div>
         </div>
       </div>
+
       <div class="border-top pt-3">
-          <small class="text-muted">
+          <medium class="text-muted">
             <a class="ml-2" href="{{ url_for('edit_profile') }}">Edit Profile</a>
-          </small>
+            <a class="ml-2" href="{{ url_for('add_interests') }}">Add Interests</a>
+          </medium>
       </div>
 {% endblock content %}
