--- a/dating/templates/home.html
+++ b/dating/templates/home.html
@@ -11,22 +11,35 @@
             <div class="card-image"><img src="static/profilepics/{{user.image_file}}" width="100%" height="100%"/></div>
           </div>
           <div class="card-footer">
-            <div class="popular-destinations-text">{{user.firstname}} {{user.lastname}}, {{user.city}}</div>
+            <div class="popular-destinations-text"><a class="ml-2" href="{{ url_for('profile', user=user.username) }}">{{user.firstname}} {{user.lastname}}</a>, {{user.city}}</div>
           </div>
         </div>
         {% endfor %}
 
       </div>
 
-      <div class="stackedcards--animatable stackedcards-overlay top"><img src="https://image.ibb.co/m1ykYS/rank_army_star_2_3x.png"  width="auto" height="auto"/></div>
-      <div class="stackedcards--animatable stackedcards-overlay right"><img src="https://image.ibb.co/dCuESn/Path_3x.png" width="auto" height="auto"/></div>
-      <div class="stackedcards--animatable stackedcards-overlay left"><img src="https://image.ibb.co/heTxf7/20_status_close_3x.png" width="auto" height="auto"/></div>
+      <div class="stackedcards--animatable stackedcards-overlay top">
+        <img src="https://image.ibb.co/m1ykYS/rank_army_star_2_3x.png"  width="auto" height="auto"/>
+      </div>
+      <div class="stackedcards--animatable stackedcards-overlay right">
+        <img src="https://image.ibb.co/dCuESn/Path_3x.png" width="auto" height="auto"/>
+      </div>
+      <div class="stackedcards--animatable stackedcards-overlay left">
+        <img src="https://image.ibb.co/heTxf7/20_status_close_3x.png" width="auto" height="auto"/>
+      </div>
+
     </div>
     <div class="global-actions">
       <div class="left-action"><img src="https://image.ibb.co/heTxf7/20_status_close_3x.png" width="26" height="26"/></div>
       <div class="top-action"><img src="https://image.ibb.co/m1ykYS/rank_army_star_2_3x.png" width="18" height="16"/></div>
       <div class="right-action"><img src="https://image.ibb.co/dCuESn/Path_3x.png" width="30" height="28"/></div>
   </div>
+</div>
+
+<div class="row">
+              <button class="btn btn-default match-button" style="margin-left: 500px">
+                <a href="{{ url_for('show_generate_matches_form') }}">Click to See Potential Matches Generated Using Your Interests </a>
+              </button>
 </div>
 
 
