--- a/dating/templates/generate_matches.html
+++ b/dating/templates/generate_matches.html
@@ -30,7 +30,7 @@
           <div class="panel panel-default">
             <div class="panel-body">
               <h4>Plan your trip</h4><br>
-                <form action='show_matches' method='POST'>
+                <form action='generate_matches' method='POST'>
                   <div class="form-group">
                     <p>Time for coffee</p>
                     <input type="datetime-local" id='tripdate' class="form-control" name='triptime'>
