Updated match details to show matches between two people

--- a/dating/templates/account.html
+++ b/dating/templates/account.html
@@ -1,13 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
-      <div class="media">
-        <div>
-        <img src="/static/profilepics/{{current_user.image_file }}">
-        <div class="media-body">
-          <h2 class="account-heading">{{ current_user.firstname }} {{ current_user.lastname}}</h2>
-
+<div class="content-section">
+  <div class="media">
+    <div>
+      <img src="static/profilepics/{{current_user.image_file }}">
+      <div class="media-body">
+        <h2 class="account-heading">{{ current_user.firstname }} {{ current_user.lastname}}</h2>
+        <!--Divides user information and interests-->
+          <div class="column">
             <ul>
+              <p style="font-size: 20px"><b>User Information</b></p>
               <p>{{ current_user.username }}</p>
               <p><b>Birth Day:</b> {{ current_user.date_of_birth }}</p>
               <p><b>Lives in:</b> {{ current_user.city }}</p>
@@ -16,13 +18,24 @@
               <p style="text-indent: 40px">Phone: {{ current_user.phone }}</p>
             </ul>
         </div>
+        <div class="column">
+          <p style="font-size: 20px"><b>Interest</b></p>
+          <p><b>book: </b>Romantic Comedy</p>
+          <p><b>music: </b>pop </p>
+          <p><b>hobby: </b>Swimming, Reading, Chilling</p>
+        </div>
+
         </div>
       </div>
+    </div>
 
-      <div class="border-top pt-3">
-          <medium class="text-muted">
-            <a class="ml-2" href="{{ url_for('edit_profile') }}">Edit Profile</a>
-            <a class="ml-2" href="{{ url_for('add_interests') }}">Add Interests</a>
-          </medium>
-      </div>
+    <div class="border-top pt-8">
+      <meduim class="text-muted">
+        <a class="ml-2" href="{{ url_for('edit_profile') }}">Edit Profile</a>
+        <a class="ml-2" href="{{ url_for('add_interests') }}">Add Interests</a>
+
+      </meduim>
+    </div>
+
+  </div>
 {% endblock content %}
