--- a/dating/static/main.css
+++ b/dating/static/main.css
@@ -1,44 +1,30 @@
 body {
   background: #fafafa;
   color: #333333;
-  margin-top: 5rem;
+  margin-top: 4rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
 
+.media{
+  margin: auto;
+  width: 65%;
+  border: 3px;
+  padding: 10px;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  height: 80%
+}
+
 .bg-steel {
-  background-color: #5f788a;
-}
-
-.myButton {
-	-moz-box-shadow: 0px 4px 0px 0px #3dc21b;
-	-webkit-box-shadow: 0px 4px 0px 0px #3dc21b;
-	box-shadow: 0px 4px 0px 0px #3dc21b;
-	background-color:#44c767;
-	-moz-border-radius:14px;
-	-webkit-border-radius:14px;
-	border-radius:14px;
-	border:1px solid #18ab29;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Verdana;
-	font-size:15px;
-	font-weight:bold;
-	padding:14px 16px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #bdd9b9;
-}
-
-.myButton:hover {
-	background-color:#5cbf2a;
-}
-
-.myButton:active {
-	position:relative;
-	top:1px;
+  background-color: #b70101;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -57,8 +43,8 @@ h1, h2, h3, h4, h5, h6 {
   background: #ffffff;
   padding: 10px 20px;
   border: 1px solid #dddddd;
-  border-radius: 3px;
-  margin-bottom: 20px;
+  max-width: 960px;
+  margin: auto;
 }
 
 .article-title {
@@ -106,4 +92,18 @@ a.article-title:hover {
 
 .account-heading {
   font-size: 2.5rem;
+  margin:auto;
+}
+
+/*css code for the columns in profile and acount html*/
+.column {
+  float: left;
+  margin:auto;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
